i guess its working

--- a/pocket_updater_gui/App.axaml
+++ b/pocket_updater_gui/App.axaml
@@ -1,8 +1,14 @@
 ﻿<Application xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:local="using:pannella.analoguepocket.gui"
              x:Class="pannella.analoguepocket.gui.App">
-
+    <Application.DataTemplates>
+        <local:ViewLocator/>
+    </Application.DataTemplates>
     <Application.Styles>
         <FluentTheme Mode="Light"/>
+        <Style Selector="Button.leftNav">
+            <Setter Property="HorizontalAlignment" Value="Stretch" />
+        </Style>
     </Application.Styles>
 </Application>
