--- a/pocket_updater_gui/Views/SettingsView.axaml
+++ b/pocket_updater_gui/Views/SettingsView.axaml
@@ -2,9 +2,10 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:i="clr-namespace:Projektanker.Icons.Avalonia;assembly=Projektanker.Icons.Avalonia"
              mc:Ignorable="d" d:DesignWidth="500" d:DesignHeight="450"
              x:Class="pannella.analoguepocket.gui.Views.SettingsView">
-    <Grid ColumnDefinitions="150,*">
+    <Grid ColumnDefinitions="160,*">
         <StackPanel IsEnabled="{Binding Loaded}" Height="{Binding ElementName=LayoutRoot, Path=ActualHeight}" Grid.Column="0" VerticalAlignment="Stretch">
             <StackPanel.Background>
                 <ImageBrush
@@ -15,57 +16,69 @@
                     Opacity=".1"
                     TileMode="Tile" />
             </StackPanel.Background>
-            <Button Classes="leftNav" Command="{Binding SaveClick}">Save</Button>
-            <Button Classes="leftNav" Margin="0,15" Click="GoHome">Go Home</Button>
+            <Button Classes="leftNav" Command="{Binding SaveClick}">
+                <StackPanel Orientation="Horizontal">
+                    <i:Icon Classes="menuicon" Value="fa-solid fa-floppy-disk" />
+                    <Label>Save</Label>
+                </StackPanel>
+            </Button>
+            <Button Classes="leftNav" Margin="0,15" Click="GoHome">
+                <StackPanel Orientation="Horizontal">
+                    <i:Icon Classes="menuicon" Value="fa-solid fa-arrow-left" />
+                    <Label>Go Back</Label>
+                </StackPanel>
+            </Button>
         </StackPanel>
-        <Grid Grid.Column="1" ColumnDefinitions="*,*,*" RowDefinitions="*,*,*,*">
-           <StackPanel Grid.Column="0" Grid.Row="0">
-               <Label>Preserve Platforms Directory</Label>
-               <CheckBox IsChecked="{Binding PreservePlatforms, Mode=TwoWay}"></CheckBox>
-           </StackPanel>
-           <StackPanel Grid.Column="1" Grid.Row="0">
-               <Label>Download Assets</Label>
-               <CheckBox IsChecked="{Binding DownloadAssets, Mode=TwoWay}"></CheckBox>
-           </StackPanel>
-           <StackPanel Grid.Column="2" Grid.Row="0">
-               <Label>Fix Jotego Names</Label>
-               <CheckBox IsChecked="{Binding FixJTNames, Mode=TwoWay}"></CheckBox>
-           </StackPanel>
-           <StackPanel Grid.Column="0" Grid.Row="1">
-               <Label>Archive Name</Label>
-               <TextBox Text="{Binding ArchiveName, Mode=TwoWay}"></TextBox>
-           </StackPanel>
-           <StackPanel Grid.Column="1" Grid.Row="1">
-               <Label>CRC CHeck</Label>
-               <CheckBox IsChecked="{Binding CrcCheck, Mode=TwoWay}"></CheckBox>
-           </StackPanel>
-           <StackPanel Grid.Column="2" Grid.Row="1">
-               <Label>Download Firmware</Label>
-               <CheckBox IsChecked="{Binding DownloadFirmware, Mode=TwoWay}"></CheckBox>
-           </StackPanel>
-           <StackPanel Grid.Column="0" Grid.Row="2">
-               <Label>Github Token</Label>
-               <TextBox Text="{Binding GithubToken, Mode=TwoWay}"></TextBox>
-           </StackPanel>
-           <StackPanel Grid.Column="1" Grid.Row="2">
-               <Label>Delete Skipped Cores</Label>
-               <CheckBox IsChecked="{Binding DeleteSkippedCores, Mode=TwoWay}"></CheckBox>
-           </StackPanel>
-           <StackPanel Grid.Column="2" Grid.Row="2">
-               <Label>Skip Alternative Assets</Label>
-               <CheckBox IsChecked="{Binding SkipAltAssets, Mode=TwoWay}"></CheckBox>
-           </StackPanel>
-           <StackPanel Grid.Column="0" Grid.Row="3">
-               <Label>Build JSONS</Label>
-               <CheckBox IsChecked="{Binding BuildInstanceJSONs, Mode=TwoWay}"></CheckBox>
-           </StackPanel>
-           <StackPanel Grid.Column="1" Grid.Row="3">
-               <Label>Use Custom Archive</Label>
-               <CheckBox IsChecked="{Binding UseCustomArchive, Mode=TwoWay}"></CheckBox>
-           </StackPanel>
-           <StackPanel Grid.Column="2" Grid.Row="3">
+        <Border Grid.Column="1" Padding="15">
+            <Grid ColumnDefinitions="*,*,*" RowDefinitions="*,*,*,*">
+               <StackPanel Grid.Column="0" Grid.Row="0">
+                   <Label>Preserve Platforms Directory</Label>
+                   <CheckBox IsChecked="{Binding PreservePlatforms, Mode=TwoWay}"></CheckBox>
+               </StackPanel>
+               <StackPanel Grid.Column="1" Grid.Row="0">
+                   <Label>Download Assets</Label>
+                   <CheckBox IsChecked="{Binding DownloadAssets, Mode=TwoWay}"></CheckBox>
+               </StackPanel>
+               <StackPanel Grid.Column="2" Grid.Row="0">
+                   <Label>Fix Jotego Names</Label>
+                   <CheckBox IsChecked="{Binding FixJTNames, Mode=TwoWay}"></CheckBox>
+               </StackPanel>
+               <StackPanel Grid.Column="0" Grid.Row="1">
+                   <Label>Archive Name</Label>
+                   <TextBox Text="{Binding ArchiveName, Mode=TwoWay}"></TextBox>
+               </StackPanel>
+               <StackPanel Grid.Column="1" Grid.Row="1">
+                   <Label>CRC CHeck</Label>
+                   <CheckBox IsChecked="{Binding CrcCheck, Mode=TwoWay}"></CheckBox>
+               </StackPanel>
+               <StackPanel Grid.Column="2" Grid.Row="1">
+                   <Label>Download Firmware</Label>
+                   <CheckBox IsChecked="{Binding DownloadFirmware, Mode=TwoWay}"></CheckBox>
+               </StackPanel>
+               <StackPanel Grid.Column="0" Grid.Row="2">
+                   <Label>Github Token</Label>
+                   <TextBox Text="{Binding GithubToken, Mode=TwoWay}"></TextBox>
+               </StackPanel>
+               <StackPanel Grid.Column="1" Grid.Row="2">
+                   <Label>Delete Skipped Cores</Label>
+                   <CheckBox IsChecked="{Binding DeleteSkippedCores, Mode=TwoWay}"></CheckBox>
+               </StackPanel>
+               <StackPanel Grid.Column="2" Grid.Row="2">
+                   <Label>Skip Alternative Assets</Label>
+                   <CheckBox IsChecked="{Binding SkipAltAssets, Mode=TwoWay}"></CheckBox>
+               </StackPanel>
+               <StackPanel Grid.Column="0" Grid.Row="3">
+                   <Label>Build JSONS</Label>
+                   <CheckBox IsChecked="{Binding BuildInstanceJSONs, Mode=TwoWay}"></CheckBox>
+               </StackPanel>
+               <StackPanel Grid.Column="1" Grid.Row="3">
+                   <Label>Use Custom Archive</Label>
+                   <CheckBox IsChecked="{Binding UseCustomArchive, Mode=TwoWay}"></CheckBox>
+               </StackPanel>
+               <StackPanel Grid.Column="2" Grid.Row="3">
 
-           </StackPanel>
-       </Grid>
+               </StackPanel>
+           </Grid>
+        </Border>
     </Grid>
 </UserControl>
