--- a/pocket_updater_gui/CoreManagerRow.axaml
+++ b/pocket_updater_gui/CoreManagerRow.axaml
@@ -9,7 +9,11 @@
         <!-- Set Defaults -->
         <Setter Property="Template">
             <ControlTemplate>
-                <Grid ColumnDefinitions="">
+                <Grid ColumnDefinitions="Auto, *, *, *">
+                    <CheckBox Grid.Column="0" IsChecked="{TemplateBinding Selected, Mode=TwoWay}"/>
+                    <TextBox Grid.Column="1" Text="{TemplateBinding platform, Mode=TwoWay}" Margin="0,0,10,0"/>
+                    <TextBox Grid.Column="2" Text="{TemplateBinding category, Mode=TwoWay}" Margin="0,0,10,0"/>
+                    <TextBlock VerticalAlignment="Center" Grid.Column="3" Text="{TemplateBinding CoreName}"/>
                 </Grid>
             </ControlTemplate>
         </Setter>
