--- a/pocket_updater_gui/Views/HomeView.axaml
+++ b/pocket_updater_gui/Views/HomeView.axaml
@@ -10,7 +10,7 @@
             <Setter Property="Background" Value="{DynamicResource MediumGrey}" />
         </Style>
     </UserControl.Styles>
-    <Grid ColumnDefinitions="160,*">
+    <Grid ColumnDefinitions="175,*">
             <StackPanel IsEnabled="{Binding Loaded}" Height="{Binding ElementName=LayoutRoot, Path=ActualHeight}" Grid.Column="0" VerticalAlignment="Stretch">
                 <StackPanel.Background>
                     <ImageBrush
@@ -45,10 +45,11 @@
                         <Label>Build JSONs</Label>
                     </StackPanel>
                 </Button>
-                <Button Margin="0,15,0,0" Classes="leftNav">
+                <Button Margin="0,15,0,0" Classes="leftNav"
+                        Click="CoresClick">
                     <StackPanel Orientation="Horizontal">
                         <i:Icon Classes="menuicon" Value="fa-solid fa-list-check" />
-                        <Label>Manage Cores</Label>
+                        <Label>Cores</Label>
                     </StackPanel>
                 </Button>
                 <Button Classes="leftNav">
@@ -86,10 +87,10 @@
                                 TileMode="Tile" />
                         </ListBox.Background>    
                         <ListBox.ItemTemplate>
-                                <DataTemplate>
-                                    <TextBlock Foreground="Azure" Text="{Binding}"/>
-                                </DataTemplate>
-                            </ListBox.ItemTemplate>
+                            <DataTemplate>
+                                <TextBlock Foreground="Azure" Text="{Binding}"/>
+                            </DataTemplate>
+                        </ListBox.ItemTemplate>
                     </ListBox>
                     <ProgressBar Foreground="Gold" Background="{DynamicResource DarkGreyBG}" Grid.Row="1" Height="15" x:Name="downloadProgress" Minimum="0" Maximum="1" Value="{Binding Progress}"></ProgressBar>
                 </Grid>
