--- a/src/Views/CoresView.axaml
+++ b/src/Views/CoresView.axaml
@@ -13,7 +13,7 @@
                 <ImageBrush
                     AlignmentX="Left"
                     AlignmentY="Top"
-                    Source="/Assets/corn2.png"
+                    Source="/src/Assets/corn2.png"
                     Stretch="None"
                     Opacity=".1"
                     TileMode="Tile" />
@@ -39,7 +39,7 @@
                         <ImageBrush
                             AlignmentX="Center"
                             AlignmentY="Top"
-                            Source="/Assets/pocket.png"
+                            Source="/src/Assets/pocket.png"
                             Stretch="None"
                             Opacity=".05"
                             TileMode="Tile" />
