--- a/src/CoreManagerRow.axaml
+++ b/src/CoreManagerRow.axaml
@@ -9,11 +9,12 @@
         <!-- Set Defaults -->
         <Setter Property="Template">
             <ControlTemplate>
-                <Grid ColumnDefinitions="Auto, *, *, *">
+                <Grid ColumnDefinitions="Auto, 300, 200, *, Auto">
                     <CheckBox Grid.Column="0" IsChecked="{TemplateBinding Selected, Mode=TwoWay}"/>
                     <TextBox Grid.Column="1" Text="{TemplateBinding platform, Mode=TwoWay}" Margin="0,0,10,0"/>
                     <TextBox Grid.Column="2" Text="{TemplateBinding category, Mode=TwoWay}" Margin="0,0,10,0"/>
                     <TextBlock VerticalAlignment="Center" Grid.Column="3" Text="{TemplateBinding CoreName}"/>
+                    <TextBlock VerticalAlignment="Center" Grid.Column="4" Text="{TemplateBinding version}" />
                 </Grid>
             </ControlTemplate>
         </Setter>
